fix spacing

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -263,6 +263,7 @@ div.footer {
     background: #fffffe !important;
     color: #272343 !important;
     position: relative;
+    height: 347px;
 }
 
 .card-box-body {
@@ -319,7 +320,7 @@ div.footer {
     }
 
     div.recent-work {
-        margin-top: 15em !important;
+        margin-top: 20em !important;
     }
 
     div.investing {
@@ -352,7 +353,7 @@ div.footer {
 
 
     div.recent-work {
-        margin-top: 15em !important;
+        margin-top: 20em !important;
     }
 
     div.investing {
